# running-pace-conversion-app

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  running-pace-converter.py
.github/actions/ci-setup/: action.yml  config.yml
.github/workflows/: create_requirements_file.yml  formatting_tests.yml  update_cache.yml
